# deku-chat

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy-pages.yml
apps/fullstack/: README.md
apps/fullstack/backend/: pyproject.toml
apps/fullstack/backend/deku_server/: agent.py  config.py  main.py  models.py  ops.py  store.py  tools.py
apps/fullstack/backend/tests/: hang_app.py  test_api.py  test_ops.py
apps/fullstack/frontend/: package.json  tsconfig.json  vite.config.ts
apps/fullstack/frontend/src/: http.ts  main.tsx
apps/web/: README.md  index.html  package.json  vite.config.ts
apps/web/src/: main.tsx
apps/web/src/agent/: models.ts  run.ts  tools.ts  transport.ts
apps/web/src/store/: idb.ts
design-handoff/advanced-llm-chat-interface-design/: README.md
design-handoff/advanced-llm-chat-interface-design/project/: .thumbnail  Agentic Chat Directions.dc.html  Agentic Chat.dc.html
design-handoff/advanced-llm-chat-interface-design/project/styles/: industry.css  nocturne.css
scripts/: parity-diff.py  record-gifs.mjs  screenshot-modals.mjs  screenshot.mjs  web-smoke.mjs
server/: agent.ts  config.ts  index.ts  store.ts  tools.ts
shared/: types.ts
src/: App.tsx  api.ts  main.tsx  state.tsx
src/components/: ChatHeader.tsx  Composer.tsx  MessageList.tsx  TopBar.tsx  icons.tsx
src/components/modals/: ApiKeysModal.tsx  CombineModal.tsx  Modal.tsx  RewindModal.tsx  SummarizeModal.tsx  TreeModal.tsx
src/styles/: app.css
