[project]
name = "deku-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.28",
    "langchain>=0.3",
    "langchain-anthropic>=1.4.8",
    "langchain-cohere>=0.6.0",
    "langchain-deepseek>=1.1.0",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-mistralai>=1.1.6",
    "langchain-openai>=1.3.5",
    "langchain-xai>=1.2.2",
    "langgraph>=0.4",
    "pydantic>=2.10",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
]

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
